--- a/static/scss/store/order.css
+++ b/static/scss/store/order.css
@@ -86,6 +86,7 @@
 .make-order form .order-form-inputs .product-dropdown {
   position: relative;
   width: 82%;
+  max-width: 500px;
   height: auto;
   background: white;
   border-bottom-left-radius: 4px;
