--- a/static/scss/store/order.scss
+++ b/static/scss/store/order.scss
@@ -77,6 +77,7 @@ $loader: rgb(80, 104, 180);
           .product-dropdown{
             position: relative;
             width: 82%;
+            max-width: 500px;
             height: auto;
             background: white;
             border-bottom-left-radius: 4px;
