--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -430,19 +430,18 @@ $loader: rgb(80, 104, 180);
   .edit-image{
     width: 80%;
     height: auto;
-    object-fit: scale-down;
     max-width: 420px;
     filter: brightness(100%);
-    transform: translateX(-50%) translateY(40px);
+    transform: translateX(-50%) translateY(55px);
     position: relative;
     left: 50%;
-  }
-  img{
     image-rendering:-moz-crisp-edges;          /* Firefox        */
     image-rendering:-o-crisp-edges;            /* Opera          */
     image-rendering:-webkit-optimize-contrast; /* Safari         */
     image-rendering:optimize-contrast;         /* CSS3 Proposed  */
     -ms-interpolation-mode:nearest-neighbor;   /* IE8+           */
+  }
+  img{
     transform: translateY(75px) translateX(-30px);
     width: 120%;
     max-width: 400px;
@@ -501,26 +500,44 @@ $loader: rgb(80, 104, 180);
           font-weight: 800;
         }
         .included{
-          width: 50%;
+          width: 100%;
           padding: 10px;
-          ul{
-            overflow: hidden; 
-            overflow-y: scroll;
-            height: 103px;
-            -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
-            li{
-              opacity: 0.7;
-              margin: 0;
-              list-style: none;
-              font-size: 15px;
-              font-weight: 800;
-              &::before{
-                content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
-                color: #007be0; /* Change the color */
-                font-weight: bold; /* If you want it to be bold */
-                display: inline-block; /* Needed to add space between the bullet and the text */
-                width: 1em; /* Also needed for space (tweak if needed) */
+          display: flex;
+          .part1{
+            width: 50%;
+            ul{
+              overflow: hidden; 
+              overflow-y: scroll;
+              height: 103px;
+              -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
+              li{
+                opacity: 0.7;
+                margin: 0;
+                list-style: none;
+                font-size: 15px;
+                font-weight: 800;
+                &::before{
+                  content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+                  color: #007be0; /* Change the color */
+                  font-weight: bold; /* If you want it to be bold */
+                  display: inline-block; /* Needed to add space between the bullet and the text */
+                  width: 1em; /* Also needed for space (tweak if needed) */
+                }
               }
+            }
+          }
+          .part2{
+            width: 50%;
+            button{
+              border-radius: 4px;
+              width: auto;
+              font-size: 15px;
+              padding: 6px 16px;
+              transition: all .2s ease-in-out;
+              color: white;
+              outline: none;
+              border: none;    
+              background: #0082ec; 
             }
           }
         }
